--- a/package.json
+++ b/package.json
@@ -3,19 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "express": "^4.18.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "express": "^4.19.2",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "@babel/preset-env": "^7.22.9",
-    "@babel/preset-react": "^7.22.5",
-    "@vitejs/plugin-react": "^4.0.3",
-    "jest": "^29.6.1",
-    "jest-environment-jsdom": "^29.6.1",
+    "@babel/preset-env": "^7.24.8",
+    "@babel/preset-react": "^7.24.7",
+    "@vitejs/plugin-react": "^4.3.1",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "npm-run-all": "^4.1.5",
-    "supertest": "^6.3.3",
-    "vite": "^4.4.4"
+    "supertest": "^7.0.0",
+    "vite": "^5.3.3"
   },
   "scripts": {
     "start:mocks": "node server/index.js",
@@ -38,5 +38,6 @@
   },
   "jest": {
     "testEnvironment": "jsdom"
-  }
+  },
+  "packageManager": "yarn@1.22.22"
 }
