--- a/package.json
+++ b/package.json
@@ -1,34 +1,36 @@
 {
-  "name": "upgrade-challenge",
-  "version": "0.1.0",
-  "private": true,
-  "type": "module",
-  "scripts": {
-    "start:mocks": "node server/main.js",
-    "start:dev": "vite",
-    "start": "run-p start:*",
-    "build": "vite build",
+	"name": "upgrade-challenge",
+	"version": "0.1.0",
+	"private": true,
+	"type": "module",
+	"scripts": {
+		"start:mocks": "node server/main.js",
+		"start:dev": "vite",
+		"start": "run-p start:*",
+		"build": "vite build",
 		"test": "jest",
 		"test:watch": "jest --watch",
 		"test:app": "jest --testPathPattern=src/",
 		"test:app:watch": "yarn run test:app --watch",
 		"test:server": "jest --testPathPattern=server/",
-		"test:server:watch": "yarn run test:server --watch"
-  },
-  "dependencies": {
-    "express": "^4.19.2",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
-  },
-  "devDependencies": {
-    "@babel/preset-env": "^7.24.8",
-    "@babel/preset-react": "^7.24.7",
-    "@vitejs/plugin-react": "^4.3.1",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
-    "npm-run-all": "^4.1.5",
-    "supertest": "^7.0.0",
-    "vite": "^5.3.3"
-  },
-  "packageManager": "yarn@1.22.22"
+		"test:server:watch": "yarn run test:server --watch",
+		"format": "prettier --write --ignore-unknown \"**/*\""
+	},
+	"dependencies": {
+		"express": "^4.19.2",
+		"react": "^18.3.1",
+		"react-dom": "^18.3.1"
+	},
+	"devDependencies": {
+		"@babel/preset-env": "^7.24.8",
+		"@babel/preset-react": "^7.24.7",
+		"@vitejs/plugin-react": "^4.3.1",
+		"jest": "^29.7.0",
+		"jest-environment-jsdom": "^29.7.0",
+		"npm-run-all": "^4.1.5",
+		"prettier": "^3.3.3",
+		"supertest": "^7.0.0",
+		"vite": "^5.3.3"
+	},
+	"packageManager": "yarn@1.22.22"
 }
