--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
 		"test:app:watch": "yarn run test:app --watch",
 		"test:server": "jest --testPathPattern=server/",
 		"test:server:watch": "yarn run test:server --watch",
-		"format": "prettier --write --ignore-unknown \"**/*\""
+		"format": "prettier --write --ignore-unknown \"**/*\"",
+		"lint": "eslint"
 	},
 	"dependencies": {
 		"express": "^4.19.2",
@@ -24,7 +25,13 @@
 	"devDependencies": {
 		"@babel/preset-env": "^7.24.8",
 		"@babel/preset-react": "^7.24.7",
+		"@eslint/js": "^9.7.0",
 		"@vitejs/plugin-react": "^4.3.1",
+		"eslint": "^9.7.0",
+		"eslint-plugin-jest": "^28.6.0",
+		"eslint-plugin-react": "^7.34.3",
+		"eslint-plugin-react-hooks": "^4.6.2",
+		"globals": "^15.8.0",
 		"jest": "^29.7.0",
 		"jest-environment-jsdom": "^29.7.0",
 		"npm-run-all": "^4.1.5",
