--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
 		"test:server": "jest --testPathPattern=server/",
 		"test:server:watch": "yarn run test:server --watch",
 		"format": "prettier --write --ignore-unknown \"**/*\"",
-		"lint": "eslint"
+		"lint": "eslint",
+		"prepare": "husky",
+		"pre-commit": "lint-staged"
 	},
 	"dependencies": {
 		"express": "^4.19.2",
@@ -32,8 +34,10 @@
 		"eslint-plugin-react": "^7.34.3",
 		"eslint-plugin-react-hooks": "^4.6.2",
 		"globals": "^15.8.0",
+		"husky": "^9.0.11",
 		"jest": "^29.7.0",
 		"jest-environment-jsdom": "^29.7.0",
+		"lint-staged": "^15.2.7",
 		"npm-run-all": "^4.1.5",
 		"prettier": "^3.3.3",
 		"supertest": "^7.0.0",
