--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
 		"globals": "^15.8.0",
 		"husky": "^9.0.11",
 		"jest": "^29.7.0",
+		"jest-css-modules": "^2.1.0",
 		"jest-environment-jsdom": "^29.7.0",
 		"lint-staged": "^15.2.7",
 		"npm-run-all": "^4.1.5",
