--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
 	"dependencies": {
 		"express": "^4.19.2",
 		"react": "^18.3.1",
-		"react-dom": "^18.3.1"
+		"react-dom": "^18.3.1",
+		"react-router-dom": "^6.24.1"
 	},
 	"devDependencies": {
 		"@babel/preset-env": "^7.24.8",
