--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"express": "^4.19.2",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
+		"react-helmet-async": "^2.0.5",
 		"react-router-dom": "^6.24.1"
 	},
 	"devDependencies": {
