--- a/package.json
+++ b/package.json
@@ -30,6 +30,10 @@
 		"@babel/preset-env": "^7.24.8",
 		"@babel/preset-react": "^7.24.7",
 		"@eslint/js": "^9.7.0",
+		"@testing-library/dom": "^10.3.1",
+		"@testing-library/jest-dom": "^6.4.6",
+		"@testing-library/react": "^16.0.0",
+		"@testing-library/user-event": "^14.5.2",
 		"@vitejs/plugin-react": "^4.3.1",
 		"eslint": "^9.7.0",
 		"eslint-plugin-jest": "^28.6.0",
