--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"pre-commit": "lint-staged"
 	},
 	"dependencies": {
+		"clsx": "^2.1.1",
 		"express": "^4.19.2",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
