--- a/package.json
+++ b/package.json
@@ -20,12 +20,15 @@
 		"pre-commit": "lint-staged"
 	},
 	"dependencies": {
+		"@hookform/resolvers": "^3.9.0",
 		"clsx": "^2.1.1",
 		"express": "^4.19.2",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
 		"react-helmet-async": "^2.0.5",
-		"react-router-dom": "^6.24.1"
+		"react-hook-form": "^7.52.1",
+		"react-router-dom": "^6.24.1",
+		"zod": "^3.23.8"
 	},
 	"devDependencies": {
 		"@babel/preset-env": "^7.24.8",
