--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
 	},
 	"dependencies": {
 		"@hookform/resolvers": "^3.9.0",
+		"@tanstack/react-query": "^5.51.1",
 		"clsx": "^2.1.1",
 		"express": "^4.19.2",
+		"ky": "^1.4.0",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
 		"react-helmet-async": "^2.0.5",
