--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 	},
 	"dependencies": {
 		"@hookform/resolvers": "^3.9.0",
+		"@tabler/icons-react": "^3.10.0",
 		"@tanstack/react-query": "^5.51.1",
 		"clsx": "^2.1.1",
 		"express": "^4.19.2",
